--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-  <script src="https://cdn.apple-mapkit.com/mk/5.x.x/mapkit.js" crossorigin async data-callback="initMapKit"
-    data-libraries="map, full-map"
-    data-initial-token="eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCIsImtpZCI6Ik1YTTlQRlRTMkYifQ.eyJpc3MiOiI3UUFNM0xHU1NDIiwiaWF0IjoxNjc3OTIxNTQzLCJleHAiOjE3MDk1MTA0MDB9.Anu5SLkMd9vWuqVjDtWe9ZV8K7LlwBD0fEtD8TetmIdAnRdZaDQt3EQBa3EYqF3lVGvjvRm_GzRNpyZq6X8m9w"></script>
-
-
+   <link href="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.css" rel="stylesheet" />
 
   <style>
     #map {
@@ -90,10 +86,19 @@
     main();
 
   </script>
-</body>
 
-<footer>
-  <p>© 2023 Neher Data Systems</p>
-</footer>
-
-</html>
+<script src="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.js"></script>
+    <script> const apiKey = 
+      "v1.public.eyJqdGkiOiJjZGEyMDBmNS1kN2RmLTQyNjktOWEyOC1iMDIxZDI3N2FhZGQifVy4F-kq1lfFOXxS_0V4-tT5rOa57ietpc-P8toXSmYo3c0oPwyTVQ00WcUbaJKDwq8jlCud0zmq50cRBfFGOWfUlVNy1I--FJweVK4j-WdSG7S-1Vf8E-TZbCk_ooceUZOhj9LQD4MD5HlZbaAAP6syK4Hz2wzsyjhGgEzk5y7bAGLdOmaNdJ2eFtGwK2XGpQfA8sKsfnwgevGWCAL77BdsHzaJMNrbKc9WXkIgt2VxvvoKk9qVzlrubYB5tMu_u09ZRuM6RlTxCV8xOTmTqlTKC20QdZo7DeRtx-lKY_XgrBYKPnwn2VXfpsyb5UKsP-AeFg_OzRe7GuXo36Sp55E.ZWU0ZWIzMTktMWRhNi00Mzg0LTllMzYtNzlmMDU3MjRmYTkx"; const region = 
+      "us-east-1"; const mapName = "ndsMap";</body> 
+      const styleUrl = 
+      `https://maps.geo.${region}.amazonaws.com/maps/v0/maps/${mapName}/style-descriptor?key=${apiKey}`; 
+      const map = new maplibregl.Map({<footer>
+        container: "map", <p>© 2023 Neher Data 
+Systems</p> </footer>
+        style: styleUrl, </html> center: 
+        [-123.1187, 49.2819], zoom: 11,
+      });
+      map.addControl(new 
+      maplibregl.NavigationControl(), "top-left");
+    </script>
