--- a/index.html
+++ b/index.html
@@ -1,104 +1,61 @@
 <!DOCTYPE html>
 <html lang="en-US">
+	<head>
+		<meta charset="utf-8" />
+		<title>AWS Maps| Neher Data Systems</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="utf-8">
-  <title>AWS Maps| Neher Data Systems</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.css" rel="stylesheet" />
 
+		<style>
+			#map {
+			  width: 100%;
+			  height: 640px;
 
-   <link href="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.css" rel="stylesheet" />
+			}
 
-  <style>
-    #map {
-      width: 100%;
-      height: 640px;
+			h1 {
+			  font-family: "Lucida Console", Courier, monospace;
+			  font-style: oblique;
+			  text-align: center;
+			}
 
-    }
+			h2 {
+			  font-family: "Lucida Console", Courier, monospace;
+			  font-style: oblique;
+			  text-align: center;
+			}
 
-    h1 {
-      font-family: "Lucida Console", Courier, monospace;
-      font-style: oblique;
-      text-align: center;
-    }
+			p {
+			  font-family: "Lucida Console", Courier, monospace;
+			  font-style: normal;
+			  text-align: start;
+			}
+		</style>
+	</head>
 
-    h2 {
-      font-family: "Lucida Console", Courier, monospace;
-      font-style: oblique;
-      text-align: center;
-    }
+	<body>
+		<h1>AWS Maps</h1>
+		<h2>Neher Data Systems</h2>
 
-    p {
-      font-family: "Lucida Console", Courier, monospace;
-      font-style: normal;
-      text-align: start;
-    }
-  </style>
+		<div id="map" />
+		<script src="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.js"></script>
+		<script>
+			const apiKey = "v1.public.eyJqdGkiOiJjZGEyMDBmNS1kN2RmLTQyNjktOWEyOC1iMDIxZDI3N2FhZGQifVy4F-kq1lfFOXxS_0V4-tT5rOa57ietpc-P8toXSmYo3c0oPwyTVQ00WcUbaJKDwq8jlCud0zmq50cRBfFGOWfUlVNy1I--FJweVK4j-WdSG7S-1Vf8E-TZbCk_ooceUZOhj9LQD4MD5HlZbaAAP6syK4Hz2wzsyjhGgEzk5y7bAGLdOmaNdJ2eFtGwK2XGpQfA8sKsfnwgevGWCAL77BdsHzaJMNrbKc9WXkIgt2VxvvoKk9qVzlrubYB5tMu_u09ZRuM6RlTxCV8xOTmTqlTKC20QdZo7DeRtx-lKY_XgrBYKPnwn2VXfpsyb5UKsP-AeFg_OzRe7GuXo36Sp55E.ZWU0ZWIzMTktMWRhNi00Mzg0LTllMzYtNzlmMDU3MjRmYTkx";
+			const region = "us-east-1";
+			const mapName = "ndsMap";
+			const styleUrl = `https://maps.geo.${region}.amazonaws.com/maps/v0/maps/${mapName}/style-descriptor?key=${apiKey}`;
+			const map = new maplibregl.Map({
+			  container: "map",
+			  style: styleUrl,
+			  center: [-74.0697479, 40.3083382],
+			  zoom: 11,
+			});
+			map.addControl(new maplibregl.NavigationControl(), "top-left");
+		</script>
 
-</head>
-
-<body>
-  <h1>AWS Maps</h1>
-  <h2>Neher Data Systems</h2>
-  <div id="map"></div>
-
-  <script>
-    const setupMapKitJs = async () => {
-      if (!window.mapkit || window.mapkit.loadedLibraries.length === 0) {
-        // mapkit.core.js or the libraries are not loaded yet.
-        // Set up the callback and wait for it to be called.
-        await new Promise(resolve => { window.initMapKit = resolve });
-
-        // Clean up
-        delete window.initMapKit;
-      }
-
-      // TODO: For production use, the JWT should not be hard-coded into JS.
-      const jwt = "eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCIsImtpZCI6Ik1YTTlQRlRTMkYifQ.eyJpc3MiOiI3UUFNM0xHU1NDIiwiaWF0IjoxNjc3OTIxNTQzLCJleHAiOjE3MDk1MTA0MDB9.Anu5SLkMd9vWuqVjDtWe9ZV8K7LlwBD0fEtD8TetmIdAnRdZaDQt3EQBa3EYqF3lVGvjvRm_GzRNpyZq6X8m9w";
-      mapkit.init({
-        authorizationCallback: done => { done(jwt); }
-      });
-    };
-
-    const main = async () => {
-      // const jwt = "eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCIsImtpZCI6Ik1YTTlQRlRTMkYifQ.eyJpc3MiOiI3UUFNM0xHU1NDIiwiaWF0IjoxNjc3OTIxNTQzLCJleHAiOjE3MDk1MTA0MDB9.Anu5SLkMd9vWuqVjDtWe9ZV8K7LlwBD0fEtD8TetmIdAnRdZaDQt3EQBa3EYqF3lVGvjvRm_GzRNpyZq6X8m9w";
-      await setupMapKitJs();
-      var MarkerAnnotation = mapkit.MarkerAnnotation;
-
-      var secretariatcenter = new mapkit.Coordinate(40.3083382, -74.0697479);
-
-      // Setting properties on creation:
-      var ndsAnnotation = new MarkerAnnotation(secretariatcenter, { color: "pink", title: "Neher Data Systems", glyphText: "🏢" });
-
-
-      const secretariat = new mapkit.CoordinateRegion(
-        new mapkit.Coordinate(40.3083382, -74.0697479),
-        new mapkit.CoordinateSpan(0.167647972, 0.354985255)
-      );
-
-      var map = new mapkit.Map("map", { colorScheme: mapkit.Map.ColorSchemes.Dark, showsMapTypeControl: false, showsUserLocationControl: true, center: secretariatcenter });
-
-      // map.region = secretariat;
-      // Add and show both annotations on the map
-      map.showItems([ndsAnnotation]);
-    };
-
-    main();
-
-  </script>
-
-<script src="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.js"></script>
-    <script> const apiKey = 
-      "v1.public.eyJqdGkiOiJjZGEyMDBmNS1kN2RmLTQyNjktOWEyOC1iMDIxZDI3N2FhZGQifVy4F-kq1lfFOXxS_0V4-tT5rOa57ietpc-P8toXSmYo3c0oPwyTVQ00WcUbaJKDwq8jlCud0zmq50cRBfFGOWfUlVNy1I--FJweVK4j-WdSG7S-1Vf8E-TZbCk_ooceUZOhj9LQD4MD5HlZbaAAP6syK4Hz2wzsyjhGgEzk5y7bAGLdOmaNdJ2eFtGwK2XGpQfA8sKsfnwgevGWCAL77BdsHzaJMNrbKc9WXkIgt2VxvvoKk9qVzlrubYB5tMu_u09ZRuM6RlTxCV8xOTmTqlTKC20QdZo7DeRtx-lKY_XgrBYKPnwn2VXfpsyb5UKsP-AeFg_OzRe7GuXo36Sp55E.ZWU0ZWIzMTktMWRhNi00Mzg0LTllMzYtNzlmMDU3MjRmYTkx"; const region = 
-      "us-east-1"; const mapName = "ndsMap";</body> 
-      const styleUrl = 
-      `https://maps.geo.${region}.amazonaws.com/maps/v0/maps/${mapName}/style-descriptor?key=${apiKey}`; 
-      const map = new maplibregl.Map({<footer>
-        container: "map", <p>© 2023 Neher Data 
-Systems</p> </footer>
-        style: styleUrl, </html> center: 
-        [-123.1187, 49.2819], zoom: 11,
-      });
-      map.addControl(new 
-      maplibregl.NavigationControl(), "top-left");
-    </script>
+	</body>
+	<footer>
+			<p>© 2023 Neher Data Systems</p>
+	</footer>
+</html>
