--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
 			  font-style: normal;
 			  text-align: start;
 			}
+			 footer {
+      font-family: "Lucida Console", Courier, monospace;
+      font-style: normal;
+      text-align: start;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 2.5rem;
+    }
 		</style>
 	</head>
 
