--- a/index.html
+++ b/index.html
@@ -1,73 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
+<html prefix="og: https://ogp.me/ns#">
+
 <head>
-	<meta charset="utf-8" />
-	<title>AWS Maps| Neher Data Systems</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta id="viewport" name="viewport"
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover">
+  <meta property="og:url" content="https://aws-maps.neherdata.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://www.github.com/neherdata.png" />
+  <link rel="apple-touch-icon" href="https://www.github.com/neherdata.png" />
+  <link rel="stylesheet" href="style.css">
 
-	<link href="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.css" rel="stylesheet" />
+  <meta property="og:title" content="AWS Maps Web Embedded" />
+  <title>AWS Maps Web Embedded</title>
+  <link href="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.css" rel="stylesheet" />
 
-	<style>
-		#map {
-			width: 100%;
-			height: 640px;
-
-		}
-
-		h1 {
-			font-family: "Lucida Console", Courier, monospace;
-			font-style: oblique;
-			text-align: center;
-		}
-
-		h2 {
-			font-family: "Lucida Console", Courier, monospace;
-			font-style: oblique;
-			text-align: center;
-		}
-
-		p {
-			font-family: "Lucida Console", Courier, monospace;
-			font-style: normal;
-			text-align: start;
-		}
-
-		footer {
-			font-family: "Lucida Console", Courier, monospace;
-			font-style: normal;
-			text-align: start;
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-			height: 2.5rem;
-		}
-	</style>
 </head>
 
 <body>
-	<h1>AWS Maps</h1>
-	<h2>Neher Data Systems</h2>
-
-	<div id="map" />
-	<script src="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.js"></script>
-	<script>
-		const apiKey = "v1.public.eyJqdGkiOiJjZGEyMDBmNS1kN2RmLTQyNjktOWEyOC1iMDIxZDI3N2FhZGQifVy4F-kq1lfFOXxS_0V4-tT5rOa57ietpc-P8toXSmYo3c0oPwyTVQ00WcUbaJKDwq8jlCud0zmq50cRBfFGOWfUlVNy1I--FJweVK4j-WdSG7S-1Vf8E-TZbCk_ooceUZOhj9LQD4MD5HlZbaAAP6syK4Hz2wzsyjhGgEzk5y7bAGLdOmaNdJ2eFtGwK2XGpQfA8sKsfnwgevGWCAL77BdsHzaJMNrbKc9WXkIgt2VxvvoKk9qVzlrubYB5tMu_u09ZRuM6RlTxCV8xOTmTqlTKC20QdZo7DeRtx-lKY_XgrBYKPnwn2VXfpsyb5UKsP-AeFg_OzRe7GuXo36Sp55E.ZWU0ZWIzMTktMWRhNi00Mzg0LTllMzYtNzlmMDU3MjRmYTkx";
-		const region = "us-east-1";
-		const mapName = "ndsMap";
-		const styleUrl = `https://maps.geo.${region}.amazonaws.com/maps/v0/maps/${mapName}/style-descriptor?key=${apiKey}`;
-		const map = new maplibregl.Map({
-			container: "map",
-			style: styleUrl,
-			center: [-74.0697479, 40.3083382],
-			zoom: 11,
-		});
-		map.addControl(new maplibregl.NavigationControl(), "top-left");
-	</script>
-
+  <h1>AWS Maps Web Embedded</h1>
+  <h2>Neher Data Systems</h2>
+  <div id="map"></div>
+  <script src="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.js"></script>
+  <script src="index.js"></script>
 </body>
+
 <footer>
-	<p>© 2023 Neher Data Systems</p>
+  <p>© 2023 <a href="https://www.neherdata.com/">Neher Data Systems</a></p>
 </footer>
 
 </html>
