--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <html prefix="og: https://ogp.me/ns#">
 
@@ -16,20 +16,19 @@
 
   <meta property="og:title" content="AWS Maps Web Embedded" />
   <title>AWS Maps Web Embedded</title>
-  <link href="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.css" rel="stylesheet" />
-
+  <link href="https://unpkg.com/maplibre-gl@3.x/dist/maplibre-gl.css" rel="stylesheet" />
 </head>
 
 <body>
   <h1>AWS Maps Web Embedded</h1>
   <h2>Neher Data Systems</h2>
   <div id="map"></div>
-  <script src="https://unpkg.com/maplibre-gl@1.14.0/dist/maplibre-gl.js"></script>
+  <script src="https://unpkg.com/maplibre-gl@3.x/dist/maplibre-gl.js"></script>
   <script src="index.js"></script>
 </body>
 
 <footer>
-  <p>© 2023 <a href="https://www.neherdata.com/">Neher Data Systems</a></p>
+  <p>© 2024 <a href="https://www.neherdata.com/">Neher Data Systems</a></p>
 </footer>
 
 </html>
