--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 </body>
 
 <footer>
-  <p>© 2024 <a href="https://www.neherdata.com/">Neher Data Systems</a></p>
+  <div class="footer">
+    <p>© 2024 <a href="https://www.neherdata.com/">Neher Data Systems</a></p>
+  </div>
 </footer>
 
 </html>
